fix: alert box overflow removed

--- a/client/src/assets/styles/components/NotificationBox.scss
+++ b/client/src/assets/styles/components/NotificationBox.scss
@@ -1,5 +1,3 @@
 .notificationBox {
   margin-bottom: 2rem;
-  max-height: 300px;
-  overflow: scroll;
 }
